TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "140045370563872" [label="Start"];
  "140045370563872" -> "140045370570160";
  "140045370570160" [label="Code"];
  "140045370570160" -> "140045370570256";
  "140045370570256" [label="Function"];
  "140045370570256" -> "140045370570352";
  "140045370570256" -> "140045370570400";
  "140045370570256" -> "140045370570448";
  "140045370570352" [label="main IDENTIFIER"];
  "140045370570400" [label="Parameters"];
  "140045370570448" [label="Code"];
  "140045370570448" -> "140045370570544";
  "140045370570448" -> "140045370570592";
  "140045370570448" -> "140045370570736";
  "140045370570448" -> "140045370571264";
  "140045370570448" -> "140045370571696";
  "140045370570544" [label="Declaration"];
  "140045370570544" -> "140045370570640";
  "140045370570544" -> "140045370570688";
  "140045370570640" [label="x IDENTIFIER"];
  "140045370570688" [label="1 INT"];
  "140045370570592" [label="Code"];
  "140045370570592" -> "140045370570784";
  "140045370570592" -> "140045370570832";
  "140045370570592" -> "140045370570976";
  "140045370570592" -> "140045370571120";
  "140045370570784" [label="Declaration"];
  "140045370570784" -> "140045370570880";
  "140045370570784" -> "140045370570928";
  "140045370570880" [label="x IDENTIFIER"];
  "140045370570928" [label="3 INT"];
  "140045370570832" [label="Declaration"];
  "140045370570832" -> "140045370571024";
  "140045370570832" -> "140045370571072";
  "140045370571024" [label="y IDENTIFIER"];
  "140045370571072" [label="2 INT"];
  "140045370570976" [label="Declaration"];
  "140045370570976" -> "140045370571168";
  "140045370570976" -> "140045370571216";
  "140045370571168" [label="z IDENTIFIER"];
  "140045370571216" [label="Expr"];
  "140045370571216" -> "140045370571312";
  "140045370571216" -> "140045370571360";
  "140045370571216" -> "140045370571456";
  "140045370571312" [label="Dereference"];
  "140045370571312" -> "140045370571408";
  "140045370571408" [label="y IDENTIFIER"];
  "140045370571360" [label="+ T__40"];
  "140045370571456" [label="Dereference"];
  "140045370571456" -> "140045370571552";
  "140045370571552" [label="x IDENTIFIER"];
  "140045370571120" [label="Comment"];
  "140045370571120" -> "140045370571504";
  "140045370571504" [label=" local z should be 5 COMMENT"];
  "140045370570736" [label="Declaration"];
  "140045370570736" -> "140045370571600";
  "140045370570736" -> "140045370571648";
  "140045370571600" [label="z IDENTIFIER"];
  "140045370571648" [label="Dereference"];
  "140045370571648" -> "140045370571744";
  "140045370571744" [label="x IDENTIFIER"];
  "140045370571264" [label="Comment"];
  "140045370571264" -> "140045370571792";
  "140045370571792" [label=" z should now be 1 COMMENT"];
  "140045370571696" [label="Return"];
  "140045370571696" -> "140045370571888";
  "140045370571888" [label="0 INT"];
}
